# sample-rust-aws-nitro-enclave-attestation-verifier-function

./: Cargo.toml  Dockerfile  input.car
src/: main.rs
