[package]
name = "aws-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-api = { version = "0.17.0", features = ["with-hyper-rustls"], default-features = false }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.28"
serde_cbor = "0.11.2"
serde_json = "1.0.96"
serde = "1.0.160"
hex = "0.4.3"
aws-nitro-enclaves-attestation = "0.1.0"
serde_bytes = "0.11.9"
sha2 = "0.10.6"
rs_merkle = "1.3.0"